--- a/Research.bib
+++ b/Research.bib
@@ -88,7 +88,8 @@
 @electronic{cjrandall2004faq,
   year={2004},
   author={CJRandall},
-  title={{ALT.ASCII-Art}: Frequently Asked Questions}
+  title={{ALT.ASCII-Art}: Frequently Asked Questions},
+  url={http://www.ascii-art.de/ascii/faq.html}
 }
 
 @electronic{nagle2001,
